tests/valid/variables/unused_exp.rs
/*
return: 0
*/

main(): int {
    2 + 2;
    return 0;
}