tests/invalid/loops/break_not_in_loop.rs
/*
fail: 1
*/

main(): int {
    break;
}